--- a/src/component/css/Login.css
+++ b/src/component/css/Login.css
@@ -54,4 +54,8 @@
     transform: scale(1.05);
     transition: all 0.4s ease-in-out;
   }
- 
+  @media (max-width: 784px){
+    .images{
+        display:none;
+    }
+}
