--- a/src/component/css/JobSlider.css
+++ b/src/component/css/JobSlider.css
@@ -1,9 +1,9 @@
-/* Default Slick arrows with red background */
+ 
 .slick-prev, .slick-next {
     font-size: 24px; /* Arrow size */
     color: white; /* Arrow color */
     background-color: red; /* Red background */
-    border-radius: 50%; /* Circular shape */
+    border-radius: 50%;  
     width: 40px; /* Arrow size */
     height: 40px; /* Arrow size */
     display: flex;
